@@ -91,7 +91,7 @@ bool EventHandler::eventActivatedView(const PlatformMouseEvent& event) const
     return false;
 }
 
-bool EventHandler::passSubframeEventToSubframe(MouseEventWithHitTestResults& event, Frame* subframe)
+bool EventHandler::passSubframeEventToSubframe(MouseEventWithHitTestResults& event, Frame* subframe, HitTestResult*)
 {
     notImplemented();
     return false;
